--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,21 @@ body{
 	font-family: 'Raleway', sans-serif;
 }
 
+.container{
+	margin: 0;
+	width: 100%;
+	padding: 0;
+}
+
+.row{
+	margin: 0;
+}
+
+.col-md-12{
+	margin: 0;
+	padding: 0;
+}
+
 a, a:visited{
 	color: #ccc;
 	text-decoration: none !important;
@@ -11,6 +26,10 @@ a, a:visited{
 
 a:hover, a:active{
 	color: white;
+}
+
+.navbar{
+	padding: 0 20px;
 }
 
 .navbar-brand{
@@ -41,14 +60,14 @@ h1{
 }
 
 #main-content{
-	margin-top: 60px;
+	margin-top: 50px;
 }
 
 .law{
-	padding-top: 30px;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center 0;
+	padding: 30px 50px 0 50px;
 }
 
 .law h1{
@@ -63,6 +82,8 @@ h1{
 	font-size: 24px;
 	margin-top: 50px;
 	padding-bottom: 30px;
+	padding-right: 35px;
+	padding-left: 35px;
 }
 
 .laws-list{
@@ -111,6 +132,10 @@ and (max-device-width : 480px) {
 	.law p{
 		font-size: 16px;
 	}
+
+	.law{
+		padding: 0 10px;
+	}
 }
 
 /* Smartphones (portrait) ----------- */
@@ -126,6 +151,10 @@ and (max-device-width : 480px) {
 
 	.law p{
 		font-size: 20px;
+	}
+
+	.law{
+		padding: 0 15px;
 	}
 }
 
@@ -163,4 +192,17 @@ and (orientation : portrait) {
 @media (-webkit-min-device-pixel-ratio : 1.5),
  (min-device-pixel-ratio : 1.5) {
 /* Styles */
+}
+
+/* Animations */
+.reveal-animation.ng-enter {
+ 	-webkit-transition: 1s linear all; /* Safari/Chrome */
+ 	transition: 1s linear all; /* All other modern browsers and IE10+ */
+ 	/* The animation preparation code */
+ 	opacity: 0;
+}
+
+.reveal-animation.ng-enter.ng-enter-active {
+ 	/* The animation code itself */
+ 	opacity: 1;
 }
